https://github.com/Kabilan76/ACMsigai

--- a/ACMsigai-server_client/innova-tech-2025-main/.github/workflows/deploy.yml
+++ b/ACMsigai-server_client/innova-tech-2025-main/.github/workflows/deploy.yml
@@ -19,10 +19,13 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build
+
+      - name: Debug - List dist directory
+        run: ls -la dist
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
