--- a/ACMsigai-server_client/innova-tech-2025-main/package.json
+++ b/ACMsigai-server_client/innova-tech-2025-main/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Kabilan76.github.io/ACMsigai/",
+  "homepage": "https://kabilan76.github.io/ACMsigai/",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
