--- a/ACMsigai-server_client/innova-tech-2025-main/.github/workflows/deploy.yml
+++ b/ACMsigai-server_client/innova-tech-2025-main/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Create .nojekyll file
+        run: touch dist/.nojekyll
+
       - name: Debug - List dist directory
         run: ls -la dist
 
